remove lissajous and other links from index.html

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,22 +4,13 @@
 <head>
     <base href="/">
     <meta charset="utf-8">
-    <title>coBeats</title>
+    <title>COBEATS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- BOOTSTRAP -->
         <!-- BASE SWATCH -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-        <!-- SLATE SWATCH-->
-    <!--<link rel="stylesheet" href="https://bootswatch.com/slate/bootstrap.min.css" crossorigin="anonymous">-->
-
-        <!-- CYBORG SWATCH -->
-    <!--<link rel="stylesheet" href="https://bootswatch.com/cyborg/bootstrap.min.css" crossorigin="anonymous">-->
-
-        <!-- DARKLY SWATCH -->
-    <!--<link rel="stylesheet" href="https://bootswatch.com/darkly/bootstrap.min.css" crossorigin="anonymous">-->
 
     <!-- Custom css -->
 
@@ -65,38 +56,7 @@
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-    <!-- Start Lissajous source files -->
-    <script src="js/lissajous/src/vendor/bufferLoader.js"></script>
-
-    <script src="js/lissajous/src/context.js"></script>
-    <script src="js/lissajous/src/track.core.js"></script>
-    <script src="js/lissajous/src/track.events.js"></script>
-    <script src="js/lissajous/src/track.api.js"></script>
-    <script src="js/lissajous/src/track.oscillator.js"></script>
-    <script src="js/lissajous/src/track.sampler.js"></script>
-    <script src="js/lissajous/src/track.envelope.js"></script>
-    <script src="js/lissajous/src/track.scheduler.js"></script>
-    <script src="js/lissajous/src/track.sequencer.js"></script>
-    <script src="js/lissajous/src/track.filter.js"></script>
-    <script src="js/lissajous/src/track.record.js"></script>
-
-    <script src="js/lissajous/src/track.effects.delay.js"></script>
-    <script src="js/lissajous/src/track.effects.chorus.js"></script>
-    <script src="js/lissajous/src/track.effects.tremolo.js"></script>
-    <script src="js/lissajous/src/track.effects.filter.js"></script>
-    <script src="js/lissajous/src/track.effects.reverb.js"></script>
-    <script src="js/lissajous/src/track.effects.distortion.js"></script>
-
-    <script src="js/lissajous/src/group.js"></script>
-    <script src="js/lissajous/src/generators.js"></script>
-
-    <script src="js/lissajous/src/vendor/tuna.js"></script>
-
-    <script src="js/lissajous/src/vendor/recorder.js"></script>
-
-    <script src="js/lissajous/extras.js"></script>
-    <script src="js/lissajous/drag-and-drop.js"></script>
-    <!-- End Lissajous source files -->
+   
 
 
 
@@ -116,8 +76,6 @@
     <script type="text/javascript" src="/js/splash/splash.component.js"></script>
     <!-- USER LOGIN -->
     <script type="text/javascript" src="/js/splash/user-login/user-login.component.js"></script>
-    <!-- ABOUT -->
-    <!--<script type="text/javascript" src="/js/about/about.component.js"></script>-->
     <!-- MAIN -->
     <script type="text/javascript" src="/js/main/main.component.js"></script>
     <!-- CHAT -->
@@ -134,9 +92,6 @@
     <!--<script src="/js/chat-script.js"></script>-->
       <!-- SOCKET SERVICE -->
     <script src="/js/socket.service.js"></script>
-
-    <!-- UI BOOTSTRAP -->
-    <script data-require="ui-bootstrap@0.10.0" data-semver="0.10.0" src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
 
 </body>
 
