--- a/src/client/js/main/main.template.html
+++ b/src/client/js/main/main.template.html
@@ -1,13 +1,14 @@
-<div class="container">
+
     <!-- <h1>main component template</h1> -->
     <!-- <hr> -->
     <div class="row">
 
-        <div class="col-md-7">
-            <easel></easel>
-        </div>
+        <!--<div class="col-md-7">-->
+            <!--<easel></easel>-->
+            <!--<tone-sequencer></tone-sequencer>-->
+        <!--</div>-->
         <div class="col-md-5">
             <chat></chat>
         </div>
     </div>
-</div>
+
