--- a/src/client/js/splash/splash.template.html
+++ b/src/client/js/splash/splash.template.html
@@ -11,7 +11,7 @@
 
 <div id="hero">
 <div class="overlay"></div>
-<div class="container text-center">
+<div class="text-center">
   <!-- <div class="col-md-12"> -->
     <h1>Welcome to CoBeats!</h1>
     <!-- <img src="../img/logo_concept.png" id="logo"> -->
