Remove tone.transport.start from index. and add container class around ui-view

--- a/src/client/js/main/chat/chat.template.html
+++ b/src/client/js/main/chat/chat.template.html
@@ -2,10 +2,7 @@
 <!-- <hr> -->
 <!--<div class= "chat_container">-->
 <div class="row" id="messageArea">
-    <!-- <div class="col-md-2">
-        </div> -->
-    <!-- <div class="col-md-10"> -->
-    <!-- <div class="col-md-3"> -->
+    <h1>message area row</h1>
     <div class="row">
         <div class="well online_users">
             <h3>Online Users</h3>
@@ -15,9 +12,8 @@
             </ul>
         </div>
     </div>
-    <!-- </div> -->
-    <!-- <div class="col-md-7"> -->
     <div class="row">
+        <h1>message History</h1>
         <div id="messageHistory">
             <div ng-init="$ctrl.messageTimeout()" ng-repeat="message in $ctrl.chatMessages | orderBy: message.created_at" class="well">
                 <strong>{{message.username}} :</strong> {{message.content}}
