--- a/src/client/js/main/main.template.html
+++ b/src/client/js/main/main.template.html
@@ -5,7 +5,7 @@
 
         <!--<div class="col-md-7">-->
             <!--<easel></easel>-->
-            <!--<tone-sequencer></tone-sequencer>-->
+            <tone-sequencer></tone-sequencer>
         <!--</div>-->
         <div class="col-md-5">
             <chat></chat>
