--- a/src/client/index.html
+++ b/src/client/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/chat-styles.css">
     <link rel="stylesheet" href="/css/main-styles.css">
-    <link rel="stylesheet" href="/css/easel-styles.css">
+    <!--<link rel="stylesheet" href="/css/easel-styles.css">-->
 
     <!-- Google Fonts -->
     <!-- BASE -->
@@ -48,12 +48,12 @@
 
     <header>
             <!-- nav-wrapper -->
-            <div class="row">
+            <div class="row nav-row" >
                 <div class="col-md-12">
                     <nav role="navigation" id="nav-header">
                         <div class="nav-wrapper navContainer">
                             <a id="mainLogo" ui-sref="splash" class="brand-logo">
-                              <img src="img/Logo_concept.png" alt="cobeats" width="90px" height="90px" class="-small">
+                              <!--<img src="img/Logo_concept.png" alt="cobeats" width="90px" height="90px" class="-small">-->
                               <div class="brand">
                                   <h1 class="hero">COBEATS</h1>
                               </div>
