--- a/src/client/js/main/main.template.html
+++ b/src/client/js/main/main.template.html
@@ -1,14 +1,12 @@
+<div class="row">
 
-    <!-- <h1>main component template</h1> -->
-    <!-- <hr> -->
-    <div class="row">
-
-        <!--<div class="col-md-7">-->
-            <!--<easel></easel>-->
-            <tone-sequencer></tone-sequencer>
-        <!--</div>-->
-        <div class="col-md-5">
-            <chat></chat>
-        </div>
+     <div id="tone-sequencer-div" class="col-md-8">
+        <tone-sequencer></tone-sequencer>
     </div>
+    <div class="col-md-1">
+    </div>
+    <div class="col-md-3">
+        <chat></chat>
+    </div>
+</div>
 
